--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
