--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.2",
     "react-simple-star-rating": "^5.1.7"
   },
