--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "multiselect-react-dropdown": "^2.0.25",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
