--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
+    "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
