--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mysql": "^4.0.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^17.2.1",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
