--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "keen-slider": "^6.8.6",
     "multer": "^1.4.5-lts.1",
     "multiselect-react-dropdown": "^2.0.25",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "primereact": "^9.6.3",
-    "quill": "^2.0.3",
+    "quill": "^1.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
