--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "primereact": "^9.6.3",
     "quill": "^1.3.7",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.2",
